--- a/views/parent/profile.ejs
+++ b/views/parent/profile.ejs
@@ -1,24 +1,31 @@
 <%- include('../partials/header') -%>
 <div class="container mt-5 bg-primary">
     <div class="row justify-content-center">
+        
         <div class="m-5 card col-8 justify-content-center bg-info">
-            <div class="row bg-white justify-content-evenly">
-                <p class="col-4">
-                    <strong>User Name</strong>: <%= user.userName %>
-                </p>
-
-                <div
-                    class="col-4 d-flex row justify-content-center align-items-center"
-                >
-                    <a href="/logout" class="btn-sm btn btn-info">Logout</a>
+            <nav class="row navbar navbar-expand bg-light">
+                <div class="container-fluid">
+                
+                    <ul class=" col navbar-nav justify-content-around">
+                      <li class="nav-item ">
+                       User Name: <strong><%= user.userName %></strong>
+                      </li>
+                      <li class="nav-item ">
+                       User ID:  <strong><%= user.id.slice(-6) %></strong>
+                      </li>
+                      <li class="nav-item ">
+                         <a href="/logout" class="btn-sm btn btn-info">Logout</a>
+                      </li>
+                    </ul>
+                
                 </div>
-            </div>
-            <div class="mt-5 mb-5 card">
-                <div class="row justify-content-center align-self-center">
+              </nav>
+            <div class="mt-4 mb-3 card ">
+                <div class=" row justify-content-center align-self-center">
                     <div
-                        class="col-md-7 text-center row justify-content-center align-self-center"
+                        class=" col-md-7 row text-center justify-content-center align-self-start"
                     >
-                        <h2>Tests</h2>
+                        <h2 >Tests</h2>
                         <div
                             class="row justify-content-center align-items-center mb-3"
                         >
@@ -83,56 +90,47 @@
                         </div>
                     </div>
                     <div
-                        class="col-md-4 text-center row justify-content-start align-self-start"
+                        class="col-md-4 row text-center justify-content-center align-self-start"
                     >
                         <h2>Students</h2>
                         <div
                             class="row mb-3 "
                         >
-                            <% if(testResults.length == 0){%>
-                                <p>No Students</p>
-                            <%} else {%>
-                                <table>
-                                <thead class=" ">
+                        <span class=" p-0">Name: <strong><%= child[0].userName %></strong></span>
+                                <table class="table table-sm mt-3">
+                                <thead>
                                     <tr class="justify-content-start">
-                                        <td>Name</td>
-                                        <td>Grade</td>
+                                        
+                                        <td colspan="3"
+                                        class="fs-5">Grades*</td>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <%if(!selectedTest) {%> 
-                                        <% for(let i = 0; i< child.length; i++) {%>
+                                        
                                             <tr>
-                                                <td><%= child[i].userName %></td>
+                                                
                                                 <td>-</td>
                                             </tr>
-                                        <%}%>
+                                      
                                     <%} else {%> 
-                                        <%for(let i =0; i< testResults.length;i++){%>
-                                             <tr>
-                                                <td><%= child[i].userName %></td>
-                                            <%if(testResults[i][0]!= undefined){%>
-                                                <%for(let j = 0;j< testResults[i][0].grades.length;j++){%>
-                                                    <%if(testResults[i][0].grades[j].test== selectedTest.title){%>
-                                                       
-                                                            <td>
-                                                                <%= testResults[i][0].grades[j].grade %>
-                                                            </td>
+                                        <%if (grades != []){%> 
+                                            <%for(let i =grades.length-1; i>= 0 && i>=grades.length-3; i--){%>
+                                                     
+                                            <td>
+                                                <%= grades[i].grade %>
+                                            </td>
                                                         
-                                                    <%}%>
-
-                                                <%}%>
-                                            <%} else {%>
+                                            <%}%>
+   
+                                        <%} else {%>
                                             <td>-</td>
                                             <%}%>
                                         </tr>
-                                        <%}%>
                                     <%}%>
-                                        
-                                    
                                 </tbody>
-                                </table>
-                            <%}%>
+                            </table>
+                            <small class="align-self-end">*last three (3) grades shown</small></td>
                         </div>
                     </div>
                 </div>
