--- a/views/student/profile.ejs
+++ b/views/student/profile.ejs
@@ -117,7 +117,7 @@
                                             <td>-</td>
                                       </tr>
                                         <%} else {%>
-                                            <% for(let i=0; i< grades.length && 1 < 10; i++){%>
+                                            <% for(let i=0; i< grades.length && i < 10; i++){%>
 
                                                 <tr>
                                                <td>
